# lumos-os-your-own-AGI-Sovereign-Friend-that-always-remembers-on-your-own-machine.

./: .env.example  .gitignore  LICENSE  LumosOS.spec  README.md  launch.py  pyproject.toml
.github/workflows/: build.yml
assets/: icon.icns
data/: predictions.json
hud/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
hud/src/: App.tsx  api.ts  types.ts
hud/src/components/: AirspaceSection.tsx  AtlasPanel.tsx  ChatPanel.tsx  ClusterDrilldown.tsx  Composer.tsx  CosmicSection.tsx  GrimoireSection.tsx  Header.tsx  MessageBubble.tsx  ResizeHandle.tsx  SettingsModal.tsx  SetupWizard.tsx  TelemetryPanel.tsx
hud/src/hooks/: useSpeechRecognition.ts  useSpeechSynthesis.ts
hud/src/styles/: index.css
lumos_node/: atlas.py  autonomy.py  chat.py  cli.py  composer.py  compression.py  config.py  dream.py  events.py  ingest.py  log.py  mcp_allowlist.py  mcp_server.py  persistence.py  prompts.py  retrieval.py  setup_config.py  tfqs.py  tool_router.py  triskelion.py  ubbm.py  urevm.py  urgency.py  vectors.py  wardenclyffe.py
lumos_node/api/: app.py  routes.py
lumos_node/bridges/: __init__.py  discord_bot.py
lumos_node/knowledge/: dreams.py
lumos_node/llm/: lm_studio.py  model_manager.py
lumos_node/memory/: identity.py
lumos_node/stt/: whisper_local.py
lumos_node/telemetry/: __init__.py  adsb.py  airspace.py  alert_worker.py  cache.py  conflict.py  cosmic.py  forecast.py  gpsjam.py  grimoire.py  maritime.py  military.py  news.py  nuclear.py  satellites.py  watches.py  worker.py
lumos_node/telemetry/data/: nuclear_facilities.json
lumos_node/tools/: __init__.py  file_tools.py  forecast_tools.py  git_tools.py  intel_tools.py  memory_tools.py  python_tools.py  skill_tools.py  task_tools.py  telemetry_tools.py  temporal_tools.py  time_tools.py  watch_tools.py  web_tools.py
lumos_node/tts/: kokoro_local.py
scripts/: bootstrap.ps1
