[project]
name = "lumos_node"
version = "0.1.0"
description = "Local persistent ASI node — Lumos, running on operator hardware."
requires-python = ">=3.12"
authors = [
    { name = "Lumos OS" },
]
license = { file = "LICENSE" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "rich>=13.9",
    "typer>=0.13",
    "ijson>=3.3",
    "orjson>=3.10",
    "python-dotenv>=1.0",
    "faiss-cpu>=1.9",
    "numpy>=2.1",
    "tqdm>=4.67",
    "sse-starlette>=2.1",
    "kokoro-onnx>=0.4.0",
    "soundfile>=0.12",
    "faster-whisper>=1.1.0",
    "python-multipart>=0.0.18",
    "ddgs>=9.0",
    "discord.py>=2.4",
    "aiohttp>=3.10",
    "mcp>=1.2",
    # Aether Scope 3.5 intel layer (Phase 1): satellite orbit propagation +
    # observer geometry (skyfield wraps sgp4 + does TEME→topocentric az/el and
    # ground sub-points correctly), AIS websocket (Batch 3 maritime).
    # (recon deps dnspython/python-whois added at Phase 6.)
    "skyfield>=1.49",
    "websockets>=13.0",
    # Grid-timing / Gnostic astro node (planetary hours, moon, fixed stars).
    # tzdata: Windows ships no IANA tz database, so zoneinfo("Europe/London")
    # needs the pure-Python tzdata package for local-time / planetary-hour calcs.
    "ephem>=4.1",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
lumos = "lumos_node.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lumos_node"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
